# freq-ai-phaseIII

./: .flake8  README.md  app.js  architecture.html  contact.html  index.html  pyproject.toml  simulation.html  styles.css  vercel.json
docs/: PHASE3_BUILD_PLAN.md  ROUTER_STRATEGY_SKILL.md
frontend/: build.mjs  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BargeSchematic.jsx  CTASection.jsx  CesiumViewer.jsx  DigitalTwinSection.jsx  Footer.jsx  HeroSection.jsx  MetricsSection.jsx  Navigation.jsx  PipelineSection.jsx  ProblemSection.jsx
scripts/: run_phase3_demo.sh
src/sol/: __init__.py
src/sol/agents/: __init__.py
src/sol/simulation/: ghost_lidar.py
web/: package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/agents/: page.tsx
web/app/api/agent-logs/: route.ts
web/app/api/ghost-state/: route.ts
web/app/simulation/: page.tsx
web/components/: OperationsPanels.tsx  SimulationCanvas.tsx
